Fixed the issue with picture of the close alern not showing if user tries to use the maximize button first ( and hide the picture ), now displaying it correctly after fix.

--- a/style.css
+++ b/style.css
@@ -108,7 +108,6 @@ html {
 
   #customAlertPicture{
     margin-bottom: 10px;
-    display: hidden;
   }
   
 
